# python-mocking-intro

./: AGENDA.md  DOCS.md  LICENSE  PLAN.md  README.md  nurfile  pyproject.toml
mocking_intro/: classes.py  dto.py  functions.py  main.py
mocking_intro/fastapi/: main.py
mocking_intro/fastapi/routes/: answer.py
mocking_intro/module/: giver.py  receiver.py
mocking_intro/tests/: test_main.py
tests/: test_0_intro_1_unit_vs_integration_vs_e2e.py  test_0_intro_2_setup.py  test_1_basics_1_where_to_get_the_mock_from.py  test_1_basics_2_what_is_a_mock.py  test_1_basics_3_mock_vs_asyncmock_vs_magicmock.py  test_1_basics_4_patch.py  test_1_basics_5_patch_object.py  test_2_mocks_1_return_value.py  test_2_mocks_2_side_effect.py  test_3_quirks_1_generators.py  test_3_quirks_2_async_generators.py  test_3_quirks_3_context_managers.py  test_4_next_1_module_vs_value.py  test_4_next_2_fastapi.py  test_4_next_3_files.py  test_main.py
